// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Registration Operators Should render the driver form 1`] = `
<div>
  <div
    className="font-sans antialiased bg-grey-lightest"
  >
    <div
      className="w-full bg-grey-lightest "
    >
      <div
        className="py-8  md:flex"
      >
        <div
          className="mr-2 hidden lg:block md:w-1/2"
        >
          <img
            alt=" Bus IMG"
            className=" h-50  w-full max-w-lg md:w-70 md:w-full lg:mx-auto lg:h-full"
            src={null}
          />
        </div>
        <div
          className="block bg-white rounded  p-2 w-full lg:max-w-3xl shadow-lg min-h-[70vh] "
        >
          <div
            className="py-4 px-8 text-black font-bold lg:px-4 md:px-4"
          >
            <h1
              className="text-center  text-2xl  font-rale font-bold md:ml-0 md:text-left"
            >
              Register Driver
            </h1>
          </div>
          <form
            onSubmit={[Function]}
          >
            <div
              className="py-4 px-4  w-full  lg:mx-auto "
            >
              <div
                className="block mb-4 xl:flex md:grid md:grid-cols-2 md:gap-2"
              >
                <div
                  className="mr-1 xl:w-1/2 "
                >
                  <div
                    className="mb-2 block font-raleway"
                  >
                    <label
                      className="block text-grey-darker text-sm font-bold font-rale  mb-2"
                      htmlFor="firstname"
                    >
                      First Name
                    </label>
                    <input
                      className="appearance-none border font-rale rounded w-full py-2 px-3 text-grey-darker bg-gray-200 text-md outline-hidden"
                      id="firstName"
                      name="FirstName"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="Ex: Yves"
                      type="text"
                    />
                  </div>
                  <p
                    className="text-red-800"
                  />
                </div>
                <div
                  className="ml-1 xl:w-1/2"
                >
                  <div
                    className="mb-2 block font-raleway"
                  >
                    <label
                      className="block text-grey-darker text-sm font-bold font-rale  mb-2"
                      htmlFor="lastname"
                    >
                      Last Name
                    </label>
                  </div>
                  <input
                    className="appearance-none border font-rale rounded w-full py-2 px-3 text-grey-darker bg-gray-200 text-md outline-hidden"
                    id="lastName"
                    name="LastName"
                    onBlur={[Function]}
                    onChange={[Function]}
                    placeholder="Hakuzimana"
                    type="text"
                  />
                  <p
                    className="text-red-800"
                  />
                </div>
              </div>
              <div
                className="block mb-4 xl:flex md:grid md:grid-cols-2  md:gap-2"
              >
                <div
                  className="mr-1 xl:w-1/2"
                >
                  <div
                    className="mb-2 block font-raleway"
                  >
                    <label
                      className="block text-grey-darker text-sm font-bold font-rale  mb-2"
                      htmlFor="email"
                    >
                      Email
                    </label>
                    <input
                      className="appearance-none border font-rale rounded w-full py-2 px-3 text-grey-darker bg-gray-200 text-md outline-hidden"
                      id="email"
                      name="email"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="Ex: example@gmail.com"
                      type="email"
                    />
                  </div>
                  <p
                    className="text-red-800"
                  />
                </div>
                <div
                  className="ml-1 xl:w-1/2"
                >
                  <div
                    className="mb-2 block font-raleway"
                  >
                    <label
                      className="block text-grey-darker text-sm font-bold font-rale  mb-2"
                      htmlFor="mobileNumber"
                    >
                      Mobile Number
                    </label>
                    <input
                      className="appearance-none border font-rale rounded w-full py-2 px-3 text-grey-darker bg-gray-200 text-md outline-hidden"
                      id="mobileNumber"
                      name="mobileNumber"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="0789000000"
                      type="text"
                    />
                  </div>
                  <p
                    className="text-red-800"
                  />
                </div>
              </div>
              <div
                className="block mb-4 xl:flex md:grid md:grid-cols-2  md:gap-2"
              >
                <div
                  className="mr-1 xl:w-1/2"
                >
                  <label
                    className="block text-grey-darker text-sm font-bold mb-2"
                    htmlFor="company"
                    name="Company"
                  >
                    Company
                  </label>
                  <select
                    className="appearance-none border rounded w-full py-2 px-3 text-grey-darker bg-gray-200"
                    id="company"
                    placeholder="Select operator company"
                    required={true}
                  >
                    <option
                      className="text-grey-darker"
                      hidden={true}
                    >
                      Select company
                    </option>
                    <option
                      value=""
                    >
                      Royal Express Limited 
                    </option>
                    <option
                      value=""
                    >
                       City Express Limited 
                    </option>
                    <option
                      value=""
                    >
                      KIGALI BUS SERVICES
                    </option>
                  </select>
                </div>
                <div
                  className="ml-1 xl:w-1/2 "
                >
                  <div
                    className="mb-2 block font-raleway"
                  >
                    <label
                      className="block text-grey-darker text-sm font-bold font-rale  mb-2"
                      htmlFor="address"
                    >
                      Address
                    </label>
                    <input
                      className="appearance-none border font-rale rounded w-full py-2 px-3 text-grey-darker bg-gray-200 text-md outline-hidden"
                      id="address"
                      name="address"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="Nyamirambo, Kigali"
                      type="text"
                    />
                  </div>
                  <p
                    className="text-red-800"
                  />
                </div>
              </div>
              <div
                className="block mb-4 xl:flex md:grid md:grid-cols-2 md:gap-2"
              >
                <div
                  className="mr-1 xl:w-1/2"
                >
                  <label
                    className="block text-grey-darker text-sm font-bold font-rale  mb-2"
                    htmlFor="nationalId"
                  >
                    National ID
                  </label>
                  <input
                    className="appearance-none border font-rale rounded w-full py-2 px-3 text-grey-darker bg-gray-200 text-md outline-hidden"
                    id="nationalId"
                    name="nationalid"
                    onBlur={[Function]}
                    onChange={[Function]}
                    placeholder="1 1997 80020002 1 20"
                    type="text"
                  />
                  <p
                    className="text-red-800"
                  >
                     
                  </p>
                </div>
                <div
                  className=" ml-1 xl:w-1/2 "
                >
                  <label
                    className="block text-grey-darker text-sm font-bold font-rale  mb-2"
                    htmlFor="license"
                  >
                    Driver License
                  </label>
                  <input
                    className="appearance-none border font-rale rounded w-full py-2 px-3 text-grey-darker bg-gray-200 text-md outline-hidden"
                    id="license"
                    name="license"
                    onBlur={[Function]}
                    onChange={[Function]}
                    placeholder="Enter enter driver license number"
                    type="text"
                  />
                  <p
                    className="text-red-800"
                  />
                </div>
              </div>
              <div
                className="flex justify-center align"
              >
                <div>
                  <button
                    className="undefined bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-xl m-2 "
                    type="submit"
                  >
                    Register Driver
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Registration Operators Should render the operator form 1`] = `
<div>
  <div
    className="font-sans antialiased bg-grey-lightest"
  >
    <div
      className="w-full bg-grey-lightest "
    >
      <div
        className="py-8  md:flex"
      >
        <div
          className="mr-2 hidden lg:block md:w-1/2"
        >
          <img
            alt=" Bus IMG"
            className=" h-50  w-full max-w-lg md:w-70 md:w-full lg:mx-auto lg:h-full"
            src={null}
          />
        </div>
        <div
          className="block bg-white rounded  p-2 w-full lg:max-w-3xl shadow-lg min-h-[70vh] "
        >
          <div
            className="py-4 px-8 text-black font-bold lg:px-4 md:px-4"
          >
            <h1
              className="text-center  text-2xl  font-rale font-bold md:ml-0 md:text-left"
            >
              Register Operator
            </h1>
          </div>
          <form
            onSubmit={[Function]}
          >
            <div
              className="py-4 px-4  w-full  lg:mx-auto "
            >
              <div
                className="block mb-4 xl:flex md:grid md:grid-cols-2 md:gap-2"
              >
                <div
                  className="mr-1 xl:w-1/2 "
                >
                  <div
                    className="mb-2 block font-raleway"
                  >
                    <label
                      className="block text-grey-darker text-sm font-bold font-rale  mb-2"
                      htmlFor="firstname"
                    >
                      First Name
                    </label>
                    <input
                      className="appearance-none border font-rale rounded w-full py-2 px-3 text-grey-darker bg-gray-200 text-md outline-hidden"
                      id="firstName"
                      name="FirstName"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="Ex: Yves"
                      type="text"
                    />
                  </div>
                  <p
                    className="text-red-800"
                  />
                </div>
                <div
                  className="ml-1 xl:w-1/2"
                >
                  <div
                    className="mb-2 block font-raleway"
                  >
                    <label
                      className="block text-grey-darker text-sm font-bold font-rale  mb-2"
                      htmlFor="lastname"
                    >
                      Last Name
                    </label>
                  </div>
                  <input
                    className="appearance-none border font-rale rounded w-full py-2 px-3 text-grey-darker bg-gray-200 text-md outline-hidden"
                    id="lastName"
                    name="LastName"
                    onBlur={[Function]}
                    onChange={[Function]}
                    placeholder="Hakuzimana"
                    type="text"
                  />
                  <p
                    className="text-red-800"
                  />
                </div>
              </div>
              <div
                className="block mb-4 xl:flex md:grid md:grid-cols-2  md:gap-2"
              >
                <div
                  className="mr-1 xl:w-1/2"
                >
                  <div
                    className="mb-2 block font-raleway"
                  >
                    <label
                      className="block text-grey-darker text-sm font-bold font-rale  mb-2"
                      htmlFor="email"
                    >
                      Email
                    </label>
                    <input
                      className="appearance-none border font-rale rounded w-full py-2 px-3 text-grey-darker bg-gray-200 text-md outline-hidden"
                      id="email"
                      name="email"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="Ex: example@provider.com"
                      type="email"
                    />
                  </div>
                  <p
                    className="text-red-800"
                  />
                </div>
                <div
                  className="ml-1 xl:w-1/2"
                >
                  <div
                    className="mb-2 block font-raleway"
                  >
                    <label
                      className="block text-grey-darker text-sm font-bold font-rale  mb-2"
                      htmlFor="mobileNumber"
                    >
                      Mobile Number
                    </label>
                    <input
                      className="appearance-none border font-rale rounded w-full py-2 px-3 text-grey-darker bg-gray-200 text-md outline-hidden"
                      id="mobileNumber"
                      name="mobileNumber"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="0789000000"
                      type="text"
                    />
                  </div>
                  <p
                    className="text-red-800"
                  />
                </div>
              </div>
              <div
                className="block mb-4 xl:flex md:grid md:grid-cols-2  md:gap-2"
              >
                <div
                  className="mr-1 xl:w-1/2"
                >
                  <label
                    className="block text-grey-darker text-sm font-bold mb-2"
                    htmlFor="company"
                    name="Company"
                  >
                    Company
                  </label>
                  <select
                    className="appearance-none border rounded w-full py-2 px-3 text-grey-darker bg-gray-200"
                    id="company"
                    placeholder="Select operator company"
                    required={true}
                  >
                    <option
                      className="text-grey-darker"
                      hidden={true}
                    >
                      Select company
                    </option>
                    <option
                      value=""
                    >
                      Royal Express Limited 
                    </option>
                    <option
                      value=""
                    >
                       City Express Limited 
                    </option>
                    <option
                      value=""
                    >
                      KIGALI BUS SERVICES
                    </option>
                  </select>
                </div>
                <div
                  className="ml-1 xl:w-1/2 "
                >
                  <div
                    className="mb-2 block font-raleway"
                  >
                    <label
                      className="block text-grey-darker text-sm font-bold font-rale  mb-2"
                      htmlFor="address"
                    >
                      Address
                    </label>
                    <input
                      className="appearance-none border font-rale rounded w-full py-2 px-3 text-grey-darker bg-gray-200 text-md outline-hidden"
                      id="address"
                      name="address"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="Cell, Sector, District"
                      type="text"
                    />
                  </div>
                  <p
                    className="text-red-800"
                  />
                </div>
              </div>
              <div
                className="mb-4"
              >
                <div
                  className="w-full mr-3 flex flex-col"
                >
                  <label
                    className="block text-grey-darker text-sm font-bold font-rale  mb-2"
                    htmlFor="nationalId"
                  >
                    National ID
                  </label>
                  <input
                    className="appearance-none border font-rale rounded w-full py-2 px-3 text-grey-darker bg-gray-200 text-md outline-hidden"
                    id="nationalId"
                    name="nationalid"
                    onBlur={[Function]}
                    onChange={[Function]}
                    placeholder="1 1997 80020002 1 20"
                    type="text"
                  />
                  <p
                    className="text-red-800"
                  >
                     
                  </p>
                </div>
              </div>
              <div
                className="flex justify-center align"
              >
                <div>
                  <button
                    className="undefined bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-xl m-2 "
                    type="submit"
                  >
                    Register Operator
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
